--- a/src/app/user/import/import.component.html
+++ b/src/app/user/import/import.component.html
@@ -1,1 +1,49 @@
-<p>import works!</p>
+<div class="main p-3">
+  <h3 class="mb-4 clearfix heading">
+    Import
+  </h3>
+  <form class="container">
+    <div class="custom-file-select" appFileDnd (fileDropped)="onFileDropped($event,true)">
+      <input type="file" id="uploadFileInput" (change)="fileBrowseHandler($event ,true)" accept="image/*">
+      <div class="text-center my-5">
+        <h2><i class="fa fa-upload"></i></h2>
+        <h5>Drag & Drop a user data file here</h5>
+        OR
+        <div class="btn btn-primary d-block w-25 mx-auto mt-3">Browse</div>
+      </div>
+    </div>
+    <div class="files-list">
+      <div class="single-file mt-3 row mx-0 p-2" *ngFor="let file of files; let i = index">
+        <div class="info mx-auto">
+          <h6 class="name mb-0 text-wrap">
+            {{ file?.name }}
+          </h6>
+          <p class="size mb-0">
+            {{ getSize(file?.size) }}
+          </p>
+          <app-file-progess [progress]="file?.progress"></app-file-progess>
+        </div>
+        <div>
+          <i class="fas fa-trash curs-ptr" (click)="deleteFile(i)"></i>
+        </div>
+      </div>
+    </div>
+
+    <div class="mt-3">
+      <mat-label>Settings</mat-label>
+      <mat-checkbox class="d-block ml-3">Send a notification mail with the login credentials to all users for whom a
+        password
+        is specified.
+      </mat-checkbox>
+    </div>
+
+    <div class="mt-5">
+      <button class="btn btn-secondary">Cancel</button>
+      <div class="float-right">
+        <button class="btn btn-secondary mr-2">Back</button>
+        <button class="btn btn-primary">Import</button>
+      </div>
+    </div>
+  </form>
+
+</div>
