--- a/src/app/user/user-list/user-list.component.html
+++ b/src/app/user/user-list/user-list.component.html
@@ -6,7 +6,8 @@
         Add
       </button>
       <div class="dropdown-menu" aria-labelledby="addCOntentDD">
-        <a class="dropdown-item" href="javascript:void(0)"><i class="fas fa-user-plus mr-1"></i>Create New
+        <a class="dropdown-item" href="javascript:void(0)" data-toggle="modal" data-target="#createNewUserModal"><i
+            class="fas fa-user-plus mr-1"></i>Create New
           User</a>
         <a class="dropdown-item" [routerLink]="'/user/import'"><i class="fas fa-file-import mr-1"></i>Import CSV
           File</a>
