--- a/src/app/user/user.component.html
+++ b/src/app/user/user.component.html
@@ -55,7 +55,8 @@
 </div>
 
 <!-- Create New Group Modal -->
-<div class="modal fade" id="createNewGroupModal" tabindex="-1" aria-labelledby="createNewGroupModalLabel" aria-hidden="true">
+<div class="modal fade" id="createNewGroupModal" tabindex="-1" aria-labelledby="createNewGroupModalLabel"
+  aria-hidden="true">
   <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-header">
@@ -85,7 +86,6 @@
     </div>
   </div>
 </div>
-
 
 <!-- edit user Modal -->
 <div class="modal fade" id="editUserModal" tabindex="-1" aria-labelledby="editUserModalLabel" aria-hidden="true">
@@ -140,6 +140,92 @@
         <div>
           <mat-label>Status</mat-label><br />
           <mat-checkbox class="ml-3">Activated</mat-checkbox>
+        </div>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
+        <button type="button" class="btn btn-primary">Modify User</button>
+      </div>
+    </div>
+  </div>
+</div>
+
+<!-- Create New Group Modal -->
+<div class="modal fade" id="createNewUserModal" tabindex="-1" aria-labelledby="createNewUserModalLabel"
+  aria-hidden="true">
+  <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="createNewUserModalLabel">Create New User</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        <div class="row justify-content-between m-0">
+          <mat-form-field appearance="outline">
+            <mat-label>First Name</mat-label>
+            <input matInput placeholder="Your First Name">
+          </mat-form-field>
+          <mat-form-field appearance="outline">
+            <mat-label>Last Name</mat-label>
+            <input matInput placeholder="Your Last Name">
+          </mat-form-field>
+        </div>
+        <mat-form-field appearance="outline">
+          <mat-label>E-mail</mat-label>
+          <input matInput placeholder="Your E-mail">
+        </mat-form-field>
+        <div class="row justify-content-between m-0">
+          <mat-form-field appearance="outline">
+            <mat-label>Language</mat-label>
+            <mat-select>
+              <mat-option value="English">English</mat-option>
+            </mat-select>
+          </mat-form-field>
+          <mat-form-field appearance="outline">
+            <mat-label>Time Zone</mat-label>
+            <mat-select>
+              <mat-option value="company-timezone">Company Timezone</mat-option>
+            </mat-select>
+          </mat-form-field>
+        </div>
+        <div class="border w-100 mb-4"></div>
+        <div class="row justify-content-between m-0">
+          <mat-form-field appearance="outline">
+            <mat-label>Role</mat-label>
+            <mat-select>
+              <mat-option value="user">User</mat-option>
+            </mat-select>
+          </mat-form-field>
+          <mat-form-field appearance="outline">
+            <mat-label>User's Groups</mat-label>
+            <input matInput placeholder="Your Groups">
+          </mat-form-field>
+        </div>
+        <div>
+          <mat-label>Product Licenses</mat-label>
+          <mat-checkbox class="ml-3 d-block">Content</mat-checkbox>
+        </div>
+        <div>
+          <mat-label>Status</mat-label>
+          <mat-checkbox class="ml-3 d-block">Activated</mat-checkbox>
+        </div>
+        <div>
+          <mat-label>Password</mat-label>
+          <mat-radio-group class="d-block ml-3" aria-label="Select an option">
+            <mat-radio-button [checked]="true" value="user">Let user choode password upon account confirmation
+            </mat-radio-button>
+            <mat-radio-button value="me">Specify password</mat-radio-button>
+            <mat-form-field class="d-block w-50 mx-auto" appearance="outline">
+              <mat-label>Password</mat-label>
+              <input type="password" matInput placeholder="Password">
+            </mat-form-field>
+          </mat-radio-group>
+          <div class="ml-3">
+            <mat-checkbox class="ml-3 d-block">Send me email with login instructions</mat-checkbox>
+            <mat-checkbox class="ml-3 d-block">Enforce user to reset password on first login</mat-checkbox>
+          </div>
         </div>
       </div>
       <div class="modal-footer">
