--- a/src/app/errors/404/error-404.component.html
+++ b/src/app/errors/404/error-404.component.html
@@ -1,7 +1,8 @@
-<div id="error-404" fxLayout="column" fxLayoutAlign="center center">
-  <div class="content" fxLayout="column" fxLayoutAlign="center center">
-    <div class="error-code">404</div>
-    <div class="message">Sorry but we could not find the page you are looking for</div>
-    <a class="back-link" [routerLink]="'/'">Go back to Home</a>
+<div fxLayout="column" fxLayoutAlign="center center" class="error-404">
+  <div class="text-center align-self-center" fxLayout="column" fxLayoutAlign="center center">
+    <div class="img"><img src="assets/images/err.png"></div>
+    <div class="error-code mt-5">4 <i class="far fa-frown" aria-hidden="true"></i> 4</div>
+    <div class="message mt-3">Sorry but we could not find the page you are looking for</div>
+    <a class="back-link mt-3" [routerLink]="'/'">Go back to Home</a>
   </div>
 </div>
