--- a/src/app/errors/500/error-500.component.html
+++ b/src/app/errors/500/error-500.component.html
@@ -1,10 +1,8 @@
-<div id="error-500" fxLayout="column" fxLayoutAlign="center center">
-  <div class="content" fxLayout="column" fxLayoutAlign="center center">
-    <div class="error-code">500</div>
-    <div class="message">Well, you broke the internet!</div>
-    <div class="sub-message">
-      Just kidding, looks like we have an internal issue, please try again in couple minutes
-    </div>
-    <a class="report-link" [routerLink]="'/'">Report this problem</a>
+<div fxLayout="column" fxLayoutAlign="center center" class="error-500">
+  <div class="text-center align-self-center" fxLayout="column" fxLayoutAlign="center center">
+    <div class="img"><img src="assets/images/err.png"></div>
+    <div class="error-code mt-5">5 <i class="far fa-frown" aria-hidden="true"></i> 0</div>
+    <div class="message mt-3">Sorry but we could not find the page you are looking for</div>
+    <a class="back-link mt-3" [routerLink]="'/'">Go back to Home</a>
   </div>
 </div>
