--- a/src/app/errors/500/error-500.component.scss
+++ b/src/app/errors/500/error-500.component.scss
@@ -1,35 +1,42 @@
-error-500 {
+.error-500 {
+  margin-top: 10vh;
 
-    #error-500 {
-        width: 100%;
-
-        .content {
-            width: 90%;
-            max-width: 512px !important;
-
-            .error-code {
-                font-size: 112px;
-                line-height: 1;
-                text-align: center;
-                margin-bottom: 16px;
-                font-weight: 600;
-            }
-
-            .message {
-                font-size: 24px;
-                text-align: center;
-            }
-
-            .sub-message {
-                font-size: 17px;
-                text-align: center;
-                margin: 16px auto 48px auto;
-            }
-
-            .report-link {
-                text-align: center;
-                font-size: 15px;
-            }
-        }
+  .img {
+    img {
+      width: 300px;
     }
+  }
+
+  // width: 100%;
+  .error-code {
+    font-size: 112px;
+    text-align: center;
+    line-height: 1;
+    margin-bottom: 16px;
+    font-weight: 600;
+  }
+
+  .message {
+    font-size: 24px;
+    text-align: center;
+  }
+
+  // .search {
+  //   // width: 100%;
+  //   height: 56px;
+  //   line-height: 56px;
+  //   margin: 48px auto 16px auto;
+  //   padding: 16px;
+  //   border: 1px solid;
+  //   border-radius: 28px;
+
+  //   input {
+  //     padding: 0 0 0 16px;
+  //   }
+  // }
+
+  .back-link {
+    font-size: 15px;
+    text-align: center;
+  }
 }
