--- a/src/app/hub/hub.component.html
+++ b/src/app/hub/hub.component.html
@@ -10,7 +10,7 @@
         </mat-tab>
         <mat-tab label="Tags">
           <div *ngIf="arr.indexOf(1)!==-1">
-            <app-tags></app-tags>
+            <app-tags [hubid]="id"></app-tags>
           </div>
         </mat-tab>
       </mat-tab-group>
