--- a/src/app/hub/tags/tags.component.html
+++ b/src/app/hub/tags/tags.component.html
@@ -7,8 +7,9 @@
         <div class="card-body">
           <div class="text-hi-dark-grey">Tags</div>
           <ul class="list-unstyled ml-2 mt-1">
-            <li class="dark-bg-hover px-2 py-1 rounded mt-2" (click)="getTags($event)" id="all">All tags</li>
-            <li class="dark-bg-hover px-2 py-1 rounded mt-2" (click)="getTags($event)" id=0>Uncategorized Tags
+            <li class="dark-bg-hover px-2 py-1 rounded mt-2" [ngClass]="{'act-tag': selTag==='all'}" (click)="changeTag('all')">All tags</li>
+            <li class="dark-bg-hover px-2 py-1 rounded mt-2" [ngClass]="{'act-tag': selTag==='uncatg'}" (click)="changeTag('uncatg')">
+              Uncategorized Tags
             </li>
           </ul>
           <hr>
@@ -16,31 +17,28 @@
             Categories
             <div class="float-right btn p-0" (click)="toggleCatgInp()"><i class="fa fa-plus-circle text-primary"></i>
             </div>
-            <form name="catForm" (ngSubmit)="addCat()" [formGroup]="catForm" novalidate *ngIf="showCatgIn">
+            <form name="catgForm" (ngSubmit)="addCatg()" [formGroup]="catgForm" novalidate *ngIf="showCatgIn">
               <mat-form-field appearance="outline" class="custom-mat-input sp-mat-input w-100 my-2 flex bg-white"
                 [floatLabel]="'never'">
-                <input matInput placeholder="Add Category" class="ml-0" formControlName="name">
+                <input matInput placeholder="Add Category" class="ml-0" formControlName="name" required>
                 <div matSuffix>
                   <button type="submit" class="btn btn-secondary input-btn mr-1" (click)="toggleCatgInp()">
                     <i class="fas fa-times"></i>
                   </button>
-                  <button type="submit" class="btn btn-primary input-btn" [disabled]="catForm!.invalid || disabled">
+                  <button type="submit" class="btn btn-primary input-btn" [disabled]="catgForm!.invalid || disabled">
                     <app-loader [type]="'btn'" *ngIf="disabled" class="align-spin-top"></app-loader>
                     <i class="fas fa-check-circle" *ngIf="!disabled"></i>
                   </button>
                 </div>
-                <mat-error *ngIf="catForm.get('name')!.hasError('required')" class="mt-3">
+                <mat-error *ngIf="catgForm.get('name')!.hasError('required')" class="mt-3">
                   Name is required
                 </mat-error>
               </mat-form-field>
             </form>
           </div>
-          <div class="text-secondary text-center mt-2" *ngIf="!cats[0]">
-            No catgories found
-          </div>
-          <ul class="list-unstyled ml-2 mt-1 cat-list" *ngIf="cats[0]">
-            <li class="dark-bg-hover px-2 py-1 rounded mt-2" *ngFor="let cat of cats">
-              {{cat.name}}
+          <ul class="list-unstyled ml-2 mt-1 cat-list" *ngIf="catgs.length>0 else noCatg">
+            <li class="dark-bg-hover px-2 py-1 rounded mt-2" *ngFor="let catg of catgs">
+              {{catg.name}}
               <div class="float-right row mx-0">
                 <i class="fa fa-plus-circle align-self-center text-primary mr-2" (click)="showCatListIP($event)"></i>
                 <div class="dropdown">
@@ -49,7 +47,7 @@
                     <i class="fa fa-ellipsis-h"></i>
                   </div>
                   <div class="dropdown-menu" aria-labelledby="catEllipsis">
-                    <a class="dropdown-item" (click)="updCatModal(editCategory, $event)" [attr.id]="cat.id">
+                    <a class="dropdown-item" (click)="updCatgModal(editCategory, catg)">
                       <i class="fas fa-edit mr-1"></i>Edit
                     </a>
                     <a class="dropdown-item" (click)="delCatg({})">
@@ -60,7 +58,7 @@
               </div>
               <mat-form-field appearance="outline" class="custom-mat-input w-100 my-2 flex bg-white"
                 [floatLabel]="'never'" style="display: none;">
-                <input matInput placeholder="Add Category" class="ml-0">
+                <input matInput placeholder="Add Category" class="ml-0" >
                 <div matSuffix class="curs-ptr">
                   <i class="fas fa-times mr-2" (click)="closeCatListIP($event)"></i>
                   <i class="fas fa-check-circle text-primary" (click)="closeCatListIP($event)"></i>
@@ -68,6 +66,11 @@
               </mat-form-field>
             </li>
           </ul>
+          <ng-template #noCatg>
+            <div class="text-secondary text-center mt-2">
+              No catgories found
+            </div>
+          </ng-template>
         </div>
       </div>
     </div>
@@ -76,11 +79,11 @@
         <div class="card-body rounded-bottom px-0 pb-0">
           <h5 class="card-title px-3">
             <div class="heading">
-              <div class="search">
+              <div class="search" *ngIf="tagForm">
                 <form name="tagForm" (ngSubmit)="addTag()" [formGroup]="tagForm" novalidate>
                   <mat-form-field appearance="outline" class="custom-mat-input mb-2" [floatLabel]="'never'"
                     style="width:85%;">
-                    <input matInput placeholder="Tag Name" class="ml-0" formControlName="name">
+                    <input matInput placeholder="Add Tag Name to Create New Tag" class="ml-0" formControlName="name" required>
                   </mat-form-field>
                   <button type="submit" class="btn btn-primary ml-3" [disabled]="tagForm!.invalid || disabled">
                     <app-loader [type]="'btn'" *ngIf="disabled"></app-loader>
@@ -102,12 +105,12 @@
                 </tr>
               </thead>
               <tbody>
-                <tr (click)="toggleInfo($event)" *ngFor="let tag of tags" id="tag.id">
+                <tr (click)="toggleInfo(tag)" *ngFor="let tag of tags">
                   <td>
                     {{tag.name}}
                   </td>
-                  <td class="text-hi-dark-grey">No Data</td>
-                  <td>No Data</td>
+                  <td class="text-hi-dark-grey">No Status</td>
+                  <td>No Date</td>
                 </tr>
               </tbody>
             </table>
@@ -194,7 +197,6 @@
   </div>
 </div>
 
-
 <!-- edit category modal  -->
 <ng-template #editCategory let-modal>
   <div class="modal-header">
@@ -206,12 +208,12 @@
   <div class="modal-body" *ngIf="modalLoading" style="min-height:60vh;" ngbAutofocus>
     <app-loader [type]="'page'"></app-loader> <!-- loader -->
   </div>
-  <form name="catForm" (ngSubmit)="updCat()" [formGroup]="catForm" novalidate *ngIf="!modalLoading">
+  <form name="catgForm" (ngSubmit)="updCatg()" [formGroup]="catgForm" novalidate *ngIf="!modalLoading">
     <div class="modal-body" ngbAutofocus>
       <mat-form-field appearance="outline" class="w-100">
         <mat-label>Name</mat-label>
-        <input matInput type="text" placeholder="Name" formControlName="name">
-        <mat-error *ngIf="catForm.get('name')!.hasError('required')">
+        <input matInput type="text" placeholder="Name" formControlName="name" required>
+        <mat-error *ngIf="catgForm.get('name')!.hasError('required')">
           Name is required
         </mat-error>
       </mat-form-field>
@@ -224,7 +226,7 @@
       </p>
     </div>
     <div class="modal-footer">
-      <button type="submit" class="btn btn-primary" [disabled]="catForm!.invalid || disabled">
+      <button type="submit" class="btn btn-primary" [disabled]="catgForm!.invalid || disabled">
         <app-loader [type]="'btn'" *ngIf="disabled"></app-loader>
         Save
       </button>
